# neo

./: .gitignore  Agents.md  README.md  eslint.config.js  links-oz.md  mcp-architecture-plan.md  package.json  pnpm-lock.yaml  pollywallet-demo.md  rust-toolchain.toml  the-rfp.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
rust/: Cargo.toml  pb-install-params-fixtures.json  pb-wasm-hashes.json
rust/harness/: Cargo.toml
rust/harness/src/: main.rs
rust/policies/pb-arg-guard/: Cargo.toml  README.md
rust/policies/pb-arg-guard/src/: lib.rs  test.rs
rust/policies/pb-arg-guard/test_snapshots/test/: addr_eq_recipient.1.json  double_install_fails.1.json  forall_all_pass.1.json  forall_one_fails.1.json  install_success.1.json  missing_index_denies.1.json  out_of_scope_function_passes.1.json  range_boundaries.1.json  range_over_max_fails.1.json  uninstall_missing_is_idempotent.1.json  wrong_type_denies.1.json
rust/policies/pb-call-cap/: Cargo.toml  README.md
rust/policies/pb-call-cap/src/: lib.rs  test.rs
rust/policies/pb-call-cap/test_snapshots/test/: double_install_fails.1.json  enforce_negative_fails.1.json  enforce_over_cap_fails.1.json  enforce_under_and_exact_cap.1.json  enforce_zero_passes_no_record.1.json  forall_sum_exceeds_cap.1.json  out_of_scope_fn_passes.1.json  set_cap_replaces_limit.1.json  token_filter_counts_only_matching_asset.1.json  uninstall_missing_is_idempotent.1.json  unresolved_path_denies.1.json  window_evicts_old_spend.1.json
rust/policies/pb-function-allowlist/: Cargo.toml  README.md
rust/policies/pb-function-allowlist/src/: lib.rs  test.rs
rust/policies/pb-function-allowlist/test_snapshots/test/: double_install_fails.1.json  (+8 more)
rust/policies/pb-rate-limit/: Cargo.toml  README.md
rust/policies/pb-rate-limit/src/: lib.rs  test.rs
(+91 files in other folders)
