[workspace]
resolver = "2"
members = ["policies/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/oz-policy-builder/oz-mcp"

[workspace.dependencies]
soroban-sdk = { version = "26.1.0", features = ["experimental_spec_shaking_v2"] }
stellar-accounts = { path = "../stellar-contracts/packages/accounts", version = "0.7.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
