[package]
name = "stellar-pb-call-cap"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
